derive/test/compile_fail/newtype_data_tag.stderr
error: unsupported attribute `data_tag` on newtype field
 --> compile_fail/newtype_data_tag.rs:4:27
  |
4 | pub struct Newtype(#[sval(data_tag = "sval::tags::NUMBER")] i32);
  |                           ^^^^^^^^
